Wed Mar 22 09:16:48 2000  Jeff Parsons  <parsons@cs.wustl.edu>

	* ace/CDR_Stream.i:
	  Initialized a local variable inside the << operator
	  for wstring. It was producing a warning on Linux g++
	  (charanga).

Tue Mar 21 14:24:07 2000  Chad Elliott <elliott_c@ociweb.com>

        * ace/config-chorus.h,
          include/makeinclude/platform_chorus.GNU,
          include/makeinclude/platform_chorus4.x_g++.GNU,
          tests/run_tests.sh:
          Expected ACE tests work.  Added support for Chorus 4.0
          on the Ultra-SPARC.

Tue Mar 21 10:37:17 2000  Carlos O'Ryan  <coryan@cs.wustl.edu>

        * Merged the non_interpretive branch.
          This fixes [BUGID:135]

        Fri Mar 10 11:27:04 2000  Carlos O'Ryan  <coryan@uci.edu>

        * ace/CDR_Stream.i:
          Fixed the << operators for ACE_OutputCDR::from_string and
          ACE_OutputCDR::from_wstring. They did not work with null
          strings.

Mon Mar 20 17:54:15 2000  Darrell Brunsch <brunsch@uci.edu>

        * ace/ACE.cpp:

          The ascii version of get_temp_dir () was calling the wchar_t
          version, which doesn't work on Win95/98 since the GetTempPathW
          isn't supported.  So I just called GetTempPathA directly.

          Thanks to David Hauck <davidh@realtimeint.com> for first pointing
          this out, Shalabh Bhatnagar <shalabh_b@hotmail.com> for informing
          me that it doesn't work on Win95, and Torsten Pfuetzenreuter
          <torsten_pf@geocities.com> for pointing out this doesn't work on
          Win98 either.

          [BUG 499]

Mon Mar 20 12:45:17 2000  Carlos O'Ryan  <coryan@uci.edu>

        * include/makeinclude/platform_linux_lxpthread.GNU:
          Updated support for X11 and GL

        * ace/CDR_Stream.i:
          A small performance improvement for ACE_InputCDR.  If the
          current message block in not writable we call grow_and_adjust
          immediately.

Sun Mar 19 22:11:47 2000  Ossama Othman  <ossama@uci.edu>
