@@ -1,3 +1,13 @@
+Wed Mar 22 09:24:12 2000  Balachandran Natarajan  <bala@cs.wustl.edu>
+
+	* ace/Configuration.cpp: Fixed a link error with SunCC5. This
+	  error only shows up when ACE  is built with debug=0 and
+	  exceptions=1. The fix was to move all the template
+	  instantiations from the end of the file to the top of the
+	  file. Thanks to Dr.Levine for helping me fix this and thanks to
+	  Manuel Benche <mbenche@jazz.cs.utsa.edu> for reporting this
+	  problem. 
+
 Wed Mar 22 09:16:48 2000  Jeff Parsons  <parsons@cs.wustl.edu>
 
 	* ace/CDR_Stream.i:
